--- a/antiplag-web-frontside/package.json
+++ b/antiplag-web-frontside/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "axios": "^0.19.0",
+    "jquery": "^3.4.1",
+    "popper.js": "1.15.0",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -18,7 +23,10 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "webpack": "^4.39.1"
   },
   "eslintConfig": {
     "root": true,
