--- a/antiplag-web-frontside/package.json
+++ b/antiplag-web-frontside/package.json
@@ -1,49 +1,50 @@
 {
-  "name": "antiplag-web-frontside",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "core-js": "^3.4.3",
-    "vue": "^2.6.10",
-    "axios": "^0.19.0",
-    "jquery": "^3.4.1",
-    "popper.js": "1.15.0",
-    "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
-    "webpack": "^4.39.1"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "antiplag-web-frontside",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "dependencies": {
+        "core-js": "^3.4.3",
+        "vue": "^2.6.10",
+        "axios": "^0.19.0",
+        "jquery": "^3.4.1",
+        "popper.js": "1.15.0",
+        "bootstrap": "^4.4.1",
+        "font-awesome": "^4.7.0",
+        "vue-simple-uploader": "^0.7.4"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^4.1.0",
+        "@vue/cli-plugin-eslint": "^4.1.0",
+        "@vue/cli-service": "^4.1.0",
+        "babel-eslint": "^10.0.3",
+        "eslint": "^5.16.0",
+        "eslint-plugin-vue": "^5.0.0",
+        "vue-template-compiler": "^2.6.10",
+        "less": "^3.9.0",
+        "less-loader": "^5.0.0",
+        "webpack": "^4.39.1"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "rules": {},
+        "parserOptions": {
+            "parser": "babel-eslint"
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions"
+    ]
 }
