--- a/antiplag-web-backstage/src/main/resources/application.properties
+++ b/antiplag-web-backstage/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8216
 server.servlet.context-path=/antiplag
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
