--- a/antiplag-web-frontside/package.json
+++ b/antiplag-web-frontside/package.json
@@ -15,7 +15,8 @@
         "popper.js": "1.15.0",
         "bootstrap": "^4.4.1",
         "font-awesome": "^4.7.0",
-        "vue-simple-uploader": "^0.7.4"
+        "vue-simple-uploader": "^0.7.4",
+        "vue-clipboard2": "^0.3.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.1.0",
