--- a/antiplag-web-backstage/src/main/resources/application.properties
+++ b/antiplag-web-backstage/src/main/resources/application.properties
@@ -3,3 +3,18 @@ server.servlet.context-path=/antiplag
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/antiplag
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.pool-name=DatebookHikariCP
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=300000
+spring.datasource.hikari.connection-test-query=SELECT 1
